Moved some files into the data package and cleaned up BanAction a bit